--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
   crossorigin="anonymous"
 />
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -29,7 +28,7 @@
       Only files inside the `public` folder can be referenced from the HTML.
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
+      work correctly both with cliesnt-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Abe Kim's (kima111) Portfolio Page</title>
@@ -54,9 +53,9 @@
   src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
   crossorigin></script>
 
-<script
+<!-- <script
   src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
-  crossorigin></script>
+  crossorigin></script> -->
 
 <script>var Alert = ReactBootstrap.Alert;</script>
 </html>
